--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-
+<main>
 <div class="container">
   <div class="card">
     <img class="card-img-top" src="./images/image-qr-code.png" alt="QR Code">
     <div class="card-body">
-  <span class="card-title">Improve your front-end skills by building projects</span>
-  <span class="card-subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
+  <h1 class="card-title">Improve your front-end skills by building projects</h1>
+  <p class="card-subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
 </div>
-
+</main>
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/JhonFXA">Jonathan Henrique</a>.
   </div>
-</div>
+</footer>
 </body>
 </html>
